2005-04-09  John Luke  <john.luke@gmail.com>

	* Services/SourceViewService.cs: catch XmlException
	while restoring style/color prefs

2005-04-06  John Luke  <john.luke@gmail.com>

	* Services/SourceViewService.cs: dont serialize
	the defaults, add some logging, and use SourceTag.Id
	not the .Name

2005-04-06  Alexandre Gomes  <alexmipego@gmail.com>
	
	* Services/SourceViewService.cs: Fix a small problem that can occur
	to svn users since some users that can be missing isDefault at all.

2005-04-05  John Luke  <john.luke@gmail.com>

	* Gui/OptionPanels/SyntaxHighlightingPanel.cs:
	fix two buglets with the sensitivity of restore
	apparently we have to set .IsDefault to false ourselves
	and update the toggle/colorbutton when it is restored
	* Services/SourceViewService.cs: add is_default to
	store/restore
	
2005-04-02  John Luke  <john.luke@gmail.com>

	* EditorBindings.glade: add glade part of new Panel
	* Services/SourceViewService.cs: new service to share
	the SourceLanguagesManager info
	* Gui/SourceEditorBuffer.cs: use service
	* Gui/OptionPanels/SyntaxHighlightingPanel.cs: new panel
	for controlling all things about syntax highlighting
	* Gui/OptionPanels/GeneralTextEditorPanel.cs: move enable syntax
	highlighting to its own panel
	* Makefile.am: add new files
	* MonoDevelopEditor.addin.xml: add service

2005-03-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorWidget.cs: Added IntPtr constructor. Nullify
	DisplayBinding field on dispose.
	* Gui/SourceEditorDisplayBinding.cs: Set SourceEditor to null on dispose.

2005-03-10  John Luke  <john.luke@gmail.com>

	* Gui/SourceEditorView.cs:
	* Gui/SourceEditorDisplayBinding.cs: dont create
	a char array from the string, it is already indexed
	that way

2005-03-09  John Luke  <john.luke@gmail.com>

	* Gui/SourceEditorDisplayBinding.cs: only
	UpdateFSW if File.Exists, otherwise we would crash

2005-03-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorWidget.cs: Properly dispose the widget.